<resources>
    <string name="app_name">PatientInformationSystem</string>
    <string name="patient_information_system">Patient Information System</string>
    <string name="home">Home</string>
    <string name="add_patient">Add Patient</string>
    <string name="prescriptions">Prescriptions</string>
    <string name="laboratory_results">Laboratory Results</string>
    <string name="patients">Patients</string>
    <!-- TODO: Remove or change this placeholder text -->

<!-- -->
    <string-array name="numbers">
        <item>Single</item>
        <item>Married</item>
        <item>Widowed</item>
        <item>Separate</item>
    </string-array>

    <string-array name="religion">
        <item>Single</item>
        <item>Married</item>
        <item>Widowed</item>
        <item>Separate</item>
    </string-array>

    <string-array name="Gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <!-- Recycler View -->
    <string name="name">Name: </string>
    <string name="ContactNumber">Contact Number: </string>
</resources>